# redp

./: Cargo.toml  README.md
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs
crates/redp-cli/: Cargo.toml
crates/redp-cli/src/: main.rs
crates/redp-core/: Cargo.toml
crates/redp-core/src/: lib.rs
crates/redp-core/src/cli/writers/: csv.rs  excel_writer.rs  mod.rs
crates/redp-core/src/redp/: mod.rs
crates/redp-core/src/redp/core/: metric_computer.rs  mod.rs  normalizer.rs  types.rs  views.rs
crates/redp-core/src/redp/parsers/: chunk_reader.rs  emon.rs  emon_system_information.rs  metrics.rs  mod.rs
crates/redp-core/src/utils/: group_by_ext.rs  mod.rs  pivot_stable_seq.rs  transpose_seq.rs
